🎁🐋 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <html>
   <head>
-        <meta charset="utf-8">
-        <title>Challenge: Colorful creature</title>
+    <meta charset="utf-8" />
+    <title>Challenge: Colorful creature</title>
+    <style>
+      h2 {
+        color: rgb(204, 0, 255);
+      }
+      body {
+        background-color: rgb(204, 255, 204);
+      }
+      h1 {
+        color: rgb(102, 102, 255);
+      }
+      p {
+        color: rgb(255, 160, 122);
+      }
+    </style>
   </head>
   <body>
-    <h1>The coolest creature</h1>
-    <p>The <em></em> is awesome because <strong></strong>.</p>
-        
-</body>
+    <h1>Chameleon </h1>
+    <h2>They are <em>awesome</em> because:</h2>
+    <p>Chameleons are a distinctive and highly specialized 
+      clade of Old World lizards with more than 200 species.
+      Chameleons are best known for their distinct range of 
+      colours, being capable of colour-shifting camouflage.</p>
+    <img
+      src="https://media.istockphoto.com/id/669060294/photo/yemen-chameleon-isolated-on-black-background.jpg?s=612x612&w=0&k=20&c=YtkrcxmC9xSId3dfIetawDBxIFuuYiZi6QxEbQegAik="
+      height="250"
+    />
+  </body>
 </html>
